fixed scroll overflow

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -4,6 +4,7 @@
 
 body {
   background: #333;
+  overflow: hidden;
 }
 
 @mixin clearfix {
